[package]
name = "verder-helpen-comm-common"
version = "0.1.0"
edition = "2018"

[features]
default = ["auth_during_comm", "platform_token", "session_db"]
auth_during_comm = ["platform_token"]
platform_token = []
session_db = ["platform_token"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verder-helpen-jwt = { git = "https://github.com/verder-helpen/verder-helpen-jwt.git" }
verder-helpen-proto = { git = "https://github.com/verder-helpen/verder-helpen-proto.git" }
josekit = "0.8.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_oauth2 = "0.5.0-rc.1"
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["postgres_pool"] }
serde = "1.0.137"
serde_json = "1.0.81"
serde_yaml = "0.8.24"
thiserror = "1.0.31"
reqwest = { version = "0.11.10", features = ["json"] }
strum = "0.24.0"
strum_macros = "0.24.0"
rand = "0.8.5"
tera = "1.15.0"
lazy_static = "1.4.0"
unic-langid = "0.9.0"
accept-language = "2.0.0"

[dev-dependencies]
serial_test = "0.6.0"
tokio-test = "0.4.2"
figment = { version = "0.10.6", features = ["env", "toml", "json"] }
